# gkc

./: .gitignore  AUTHORS  ChangeLog  INSTALL  MANIFEST  Makefile.am  README  README.md  autotools_Makefile  compile.bat  compile.sh  compile_osx.sh  compile_wasm.sh  config-gcc.h  config-w32.h  config.h  configure.ac  gkc.pc.in  makefile  profile.sh  profilereasoner.sh  smakefile  vgrindcompile.sh
Builtparser/: dbclausify.c  dbclausify.h  dbgenparse.h  dbotter.tab.c  dbotter.tab.h  dbotter.yy.c  dbotterparse.h  dbparse.c  dbparse.h  dbprolog.tab.c  dbprolog.tab.h  dbprolog.yy.c  jsparse.c  jsparse.h
Db/: Makefile.in  dballoc.c  dballoc.h  dbapi.h  dbdata.c  dbdata.h  dbhash.c  dbhash.h  dblock.c  dblog.c  dbmem.c  dbmem.h  dbmpool.c  dbmpool.h  dbutil.c  dbutil.h
Doc/: ARCHITECTURE.md  ARITHMETIC_INSTANTIATION.md  DATA_REPRESENTATION.md  DEVELOPMENT_GUIDE.md  README.md  SHARED_MEMORY.md  TERM_MATCHING.md  cli_reference.md  json_ld_logic.md  strategy_reference.md
Examples/: README.md  algebra.txt  arithmetic0.txt  arithmetic1.txt  arithmetic2.txt  arithmetic3.txt  arithmetic4.txt  arithmetic_instantiation_apples.txt  arithmetic_instantiation_product.txt  blocks.txt  blocks1.txt  blocks2.txt  blocks3.txt  blocks4.txt  blocks5.txt  blocks_strat.txt  blocks_strat2.txt  blocks_strat3.txt  boolean.txt  distinct.txt  dreadbury.txt  example1.txt  example10.txt  example10a.txt  example11.txt  example12.txt  example13.txt  example2.txt  example3.txt  example4.txt  example5.txt  example6.txt  example7.txt  example8.txt  example9.txt  group.txt  jsexample1.js  jsexample10.js  jsexample11.js  jsexample12.js  (+27 more)
Jstest/: example1.js  example10.js  example11.js  example12.js  example13.js  example14.js  example2.js  example3.js  example4.js  example5.js  example7.js  example8.js  example9.js  j11.js  j12.js  j13.js  j14.js  j15.js  j16.js  j17.js  j18.js  j20.js  j21.js  j30.js  j31.js  j32.js  j33.js  j34.js  j35.js  j36.js  j37.js  j38.js  j39.js  j40.js  j41.js  j42.js  j43.js  t1.js  t2.js  tptp_example.txt
Main/: Makefile  Makefile.am  Makefile.in  gkc.c  wgdb.c
Parser/: Makefile.am  Makefile.in  dbclausify.c  dbclausify.h  dbgenparse.h  dbotter.l  dbotter.output  dbotter.tab.c  dbotter.y  dbotter.yy.c  dbparse.c  dbparse.h  dbprolog.l  dbprolog.output  dbprolog.y  dbprolog.yy.c  dbprologparse.h  jsparse.c  jsparse.h  ok_dbotter.l  ok_dbotter.y
Printer/: Makefile.in  dbotterprint.c  dbotterprint.h
Python/: Makefile  Makefile.in
Reasoner/: Makefile.am  Makefile.in  analyze.c  analyze.h  arithinst.c  arithinst.h  build.c  build.h  chains.c  chains.h  clmeta.c  clmeta.h  clstore.c  clstore.h  clterm.c  clterm.h  derive.c  derive.h  glb.c  glb.h  guide.c  guide.h  hash.c  hash.h  history.c  history.h  init.c  init.h  langdoc.txt  makeguide.c  makeguide.h  mem.c  mem.h  printerrutils.c  printerrutils.h  prob.c  prob.h  prop.c  prop.h  propagate.c  (+21 more)
Rexamples/: .~lock.fof_2019.ods#
Share/: README.md  base_parallel4.txt  base_parallel8_30s.txt  base_parallel8_60s.txt  dummykb.txt  gkc  rdiff.py  (+12 more)
Sharing/: README.md  (+3 more)
(+48 files in other folders)
