#
# - - - - reasoner sources - - - -

AUTOMAKE_OPTIONS = subdir-objects

noinst_LTLIBRARIES = libReasoner.la
libReasoner_la_SOURCES = types.h rincludes.h \
  printerrutils.c printerrutils.h\
  rmain.c rmain.h\
  glb.c glb.h\
  rgenloop.c rgenloop.h\
  resolve.c resolve.h\
  simp.c simp.h\
  strat.c strat.h\
  guide.c guide.h\
  derive.c derive.h\
  subsume.c subsume.h\
  propagate.c propagate.h\
  unify.c unify.h\
  build.c build.h\
  history.c history.h\
  prob.c prob.h\
  hash.c hash.h\
  clstore.c clstore.h\
  clmeta.c clmeta.h\
  clterm.c clterm.h\
  mem.c mem.h\
  init.c init.h\
  ../Main/gkc.c\
  ../cjson/cjson.c ../cjson/cjson.h\
  ../Test/dbtest.c ../Test/dbtest.h

